Rework beginning of Sec 8.4

--- a/skysub.tex
+++ b/skysub.tex
@@ -1032,8 +1032,9 @@ These graphs mimic the spatial distribution of the 2007B and 2009B WIRCam fields
 \subsection{The Growth of Sky Offsets in Time and Space and Effectiveness of the 2009B Strategy}
 \label{sec:offsetevo}
 
-Previously we have established the usefulness of sky offsets, here we address the value of 2007B and 2009B sky-target nodding observing strategies (introduced in \Sec{Observations}) when confronted with the realized sky offset distributions.
-A key question is determining if the 2009B strategy to minimize background level uncertainty by minimizing the latency between sky and target samples to $\sim 1.2$~minutes is justified.
+In \Sec{offset_amplitudes}--\Sec{residual_diffs}, we established the usefulness of sky offsets.
+We now address the value of the 2007B and 2009B observing programs, with the sky-target nodding observing strategies (introduced in \Sec{Observations}).
+A key question is whether the 2009B strategy to minimize background level uncertainty by minimizing the latency between sky and target samples to $\sim$1.2 minutes is justified.
 Overall the 2009B semester reduced sky offsets by 30\% (\Tab{offset_hierarchy}), at the cost of a roughly 50\% reduction in observational efficiency (see~\Tab{obssummary}).
 Here we show that the background certainty of any sky-target nodding campaign is limited both by this minimum sky sampling latency, and also by the spatial structure of the sky background.
 
