--- a/tables/fw100k_medsky_offset_hierarchy.tex
+++ b/tables/fw100k_medsky_offset_hierarchy.tex
@@ -2,7 +2,7 @@
 % \hline
 &  & $J$ & $K_s$ \\ % \cline{3-4} \cline{5-6}
 % \hline
-Offset Type & Sem. & $\frac{\sigma_\Delta}{\langle I_\mathrm{sky}\rangle }$ (\%) & $\frac{\sigma_\Delta}{\langle I_\mathrm{sky}\rangle }$ (\%) \\
+Offset Type & Sem. & $\frac{\sigma_\Delta}{\langle I_\mathrm{bkg}\rangle }$ (\%) & $\frac{\sigma_\Delta}{\langle I_\mathrm{bkg}\rangle }$ (\%) \\
 \hline
 \multirow{2}{*}{$\Delta_F$} & 07B & 2.53 & 2.29 \\
 % \hline
