--- a/tables/nightset_medsky_scalar_resid_diffs.tex
+++ b/tables/nightset_medsky_scalar_resid_diffs.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lccc}
 & \multicolumn{3}{c}{Coupled Block
-$\langle I_i - I_j\rangle / \langle I_\mathrm{sky} \rangle$ (\%)} \\
+$\langle I_i - I_j\rangle / \langle I_\mathrm{bkg} \rangle$ (\%)} \\
 & 25th & 50th & 75th \\
 \hline
 $J$, uncorrected & 0.49 & 0.91 & 1.76 \\
