Small cleanup to bbl

--- a/skysub.tex
+++ b/skysub.tex
@@ -1208,7 +1208,9 @@ We are also compiling a panchromatic catalog of resolved stars across the M31 di
 By directly identifying the stars that contribute to the NIR light of a galaxy, we will assess long-standing tensions between NIR isochrones and broadband SED modelling of galaxies.
 
 
-\bigskip We thank the anonymous referee for offering many very useful suggestions that clarified this work. We also thank Loic Albert and Karun Thanjavur, previously from CFHT, for their help with WIRCam I'iwi data products and procedures and the CFHT staff for many informative discussions and their diligence in performing the queue service observations. We are grateful for the Spitzer 3.6~$\mu$m mapping provided by Pauline Barmby (University of Western Ontario).
+\bigskip We thank the anonymous referee for offering many useful suggestions that clarified this work.
+We also thank Loic Albert and Karun Thanjavur, previously from CFHT, for their help with WIRCam I'iwi data products and procedures and the CFHT staff for many informative discussions and their diligence in performing the queue service observations.
+We are grateful for the Spitzer 3.6~$\mu$m mapping provided by Pauline Barmby (University of Western Ontario).
 J.S. and S.C. acknowledge support through respective Graduate Scholarship and Discovery grants from the Natural Sciences and Engineering Research Council of Canada.
 M.M is supported by NASA through a Hubble Fellowship grant HST-HF51308.01-A awarded by the Space Telescope Science Institute, which is operated by the Association of Universities for Research in Astronomy, Inc., for NASA, under contract NAS 5-26555.
 This publication makes use of data products from the Two Micron All Sky Survey, which is a joint project of the University of Massachusetts and the Infrared Processing and Analysis Center/California Institute of Technology, funded by the National Aeronautics and Space Administration and the National Science Foundation.
