--- a/skysub.tex
+++ b/skysub.tex
@@ -153,12 +153,13 @@ In a future instalment we use resolved star counts to establish the NIR surface 
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=\columnwidth]{figs/fieldmap_colour}
+% \includegraphics[width=\columnwidth]{figs/fieldmap_colour}
+\includegraphics[width=\columnwidth]{figs/bw/f1}
 \caption{\androids\ WIRCam field positions on M31.
-Central blue tiles are the 27 disk fields observed in 2007B, surrounded by 4 sky fields (blue with solid black outlines).
-Red tiles at center are the 12 disk fields observed in 2009B.
-The red ring of 53 fields is the 2009B sky sampling ring.
-The dashed yellow ellipse marks the M31 disk at $R=20$ kpc along the major axis.
+Central light gray tiles are the 27 disk fields observed in 2007B, surrounded by 4 sky fields.
+Dark tiles at center are the 12 disk fields observed in 2009B.
+The outer ring of 53 fields is the 2009B sky sampling ring.
+The dashed ellipse marks the M31 disk at $R=20$ kpc along the major axis.
 Coordinates are centered on the nucleus of M31 with North up, and East is left.}
 \label{fig:fieldmap}
 % skysubpub/chart.py
@@ -215,7 +216,7 @@ An objective of this study is to determine how observational design can improve 
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=\columnwidth]{figs/sky_target_lag}
+\includegraphics[width=\columnwidth]{figs/bw/f2}
 \caption{Time latency between target observations and sky field sampling in the 2007B and 2009B WIRCam observing runs.
 The 2009B program was designed to ensure that no disk sample would be removed by more than 1.5 minutes from a sky sample by using a STTS nodding pattern.}
 \label{fig:sky_target_lag}
@@ -224,7 +225,7 @@ The 2009B program was designed to ensure that no disk sample would be removed by
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=\columnwidth]{figs/sky_target_dist}
+\includegraphics[width=\columnwidth]{figs/bw/f3}
 \caption{Distance between sky and target observations in the 2007B and 2009B WIRCam observing runs.
 The larger nodding distance of 2009B is a consequence of sky ring sampling.
 The maximum nodding distance across the sky ring was purposely set to $\sim 3$\arcdeg\ to avoid excessive time overheads (see \Fig{fieldmap}).
@@ -385,7 +386,7 @@ This is a distinct advantage over dome flats, which CFHT builds at the beginning
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=\columnwidth]{figs/flat_ratio_55136_Ks}
+\includegraphics[width=\columnwidth]{figs/bw/f6}
 \caption{Ratio of corresponding $K_s$ band \texttt{NIGHT} sky flat and dome sky flats.
 This ratio provides an approximate upper limit on the systematic uncertainty of flat fielding with WIRCam.
 Note that the \texttt{NIGHT} sky flats have been renormalized to remove the chip-to-chip zero-point correction described in \Sec{skyflatconstruction}.}
@@ -576,8 +577,8 @@ Thus sky flat evolution is not driven by WIRCam gain instabilities, but by large
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=\columnwidth]{figs/fw100k_betadiff}
-\caption{Distribution of real-time sky flat scaling factors, measuring detector-to-detector zero-point differences relative to detector \#1 (red: \#2, green: \#3, blue: \#4) in $J$ and $K_s$ bands.
+\includegraphics[width=\columnwidth]{figs/bw/f8}
+\caption{Distribution of real-time sky flat scaling factors, measuring detector-to-detector zero-point differences relative to detector \#1 (gray: \#2, solid outline: \#3, dotted outline: \#4) in $J$ and $K_s$ bands.
 }
 \label{fig:fw100k_zpdiff}
 % $andpipe/wircam/skyflat/plot/chip_zp_diff.py
@@ -585,10 +586,10 @@ Thus sky flat evolution is not driven by WIRCam gain instabilities, but by large
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=\columnwidth]{figs/fw100k_chip_to_chip}
+\includegraphics[width=\columnwidth]{figs/bw/f9}
 \caption{Distribution of mean detector-to-detector zero-point offsets for sky images processed by real-time sky flats.
 Zero-point offsets between detectors \#1 \& \#2, \#1 \& \#3, and \#1 \& \#4 are plotted as
-red, green and blue histograms, respectively, for the $J$-band (top) and $K_s$-band (bottom).}
+gray, solid outline and dotted outline histograms, respectively, for the $J$-band (top) and $K_s$-band (bottom).}
 \label{fig:fw100k_chip_to_chip}
 % andpipe/wircam/calibset/photcal/singleimg/chip_consistency_zp_fixa.py
 \end{figure}
@@ -940,7 +941,7 @@ The sky offsets are indeed distributed within the uncertainty budgeted by $\sigm
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=\columnwidth]{figs/offsetratiomap}
+\includegraphics[width=\columnwidth]{figs/bw/f14}
 \caption{Acceptability of $J$ and $K_s$ scalar sky offsets between blocks, as measured by the ratio of $\Delta_B/\sigma_{\Delta_F}$, plotted as histograms and field maps. Shaded blue and red-outlined histograms distinguish blocks observed in 2007B and 2009B, respectively. Scalar sky offsets required for blocks are consistent with the background level uncertainties of single frames, given sky-target nodding background subtraction.}
 \label{fig:offset_ratio_map}
 % made with andpipe/wircam/calibset/mosaic/offsetratiomap.py
@@ -1080,7 +1081,7 @@ Mean and 95\% levels of sky offsets in the 2007B semester are plotted as large b
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=\columnwidth]{figs/sbdiffs}
+\includegraphics[width=\columnwidth]{figs/bw/f17}
 \caption{Surface brightness difference maps, showing systematic uncertainties in surface brightness reconstruction. (a) difference maps between our simplex scalar-fit mosaics (\Fig{mosaics}b) and \sw{Montage} scalar-fit mosaics. (b) Maps of $J-[3.6]$ and $K_s-[3.6]$ surface color inferred from the simplex scalar-sky fitted WIRCam mosaics and Spitzer/IRAC 3.6~$\mu$m image \citep{Barmby:2006}.
 Note that the IRAC map crops the \androids/WIRCam footprint.}
 \label{fig:sbdiffs}
@@ -1142,7 +1143,7 @@ Evidently, our scalar sky offset mosaics are not systematically reliable beyond 
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=\columnwidth]{figs/bootstrap_sb_rms}
+\includegraphics[width=\columnwidth]{figs/bw/f18}
 \caption{Mosaic maps of bootstrap RMS surface brightness in $J$ (left) and $K_s$ (right).
 White contours identify RMS levels of 0.05 (solid), 0.1 (dashed) and 0.2 (dash-dot) mag arcsec$^{-2}$.}
 \label{fig:bootstrap_sb_rms}
