--- a/skysub.tex
+++ b/skysub.tex
@@ -82,11 +82,11 @@ The shapes, ages, kinematics and relative fraction of galaxy components (bulge, 
 
 Unfortunately, the fundamental task of disentangling galaxy components---which typically involves light profile decompositions, color gradients and mass modelling---remains non-trivial.
 Stellar population studies of spiral galaxies are thwarted by a three-fold degeneracy between stellar age ($A$), metallicity ($Z$) and ISM dust that can only be lifted by combining, at the very least, optical and infrared images with realistic dust models \citep{de-Jong:1996b,MacArthur:2004,Pforr:2012}.
-Likewise, mass models of spiral galaxies suffer a degeneracy between the stellar $M/L$ and dark halo parameters that requires, in addition to an extended rotation curve, deep and accurate multi-band imaging to uniquely constrain the stellar $M/L$ ratio \citep{Dutton:2005,Courteau:2013}. 
+Likewise, mass models of spiral galaxies suffer a degeneracy between the stellar $M/L$ and dark halo parameters that requires, in addition to an extended rotation curve, deep and accurate multi-band imaging to uniquely constrain the stellar $M/L$ ratio \citep{Dutton:2005,Courteau:2014}. 
 
 Compounding these challenges are fundamental uncertainties in modern stellar population synthesis, particularly uncertainties in the interpretation of near-infrared (NIR) light.
 For instance, optical-NIR SEDs yield unreliable population synthesis fits compared to optical-only SED fits.
-This failure is largely attributable to inadequate stellar population synthesis recipes for NIR bands and naive parameterization of star formation histories \citep{Taylor:2011,Courteau:2013}.
+This failure is largely attributable to inadequate stellar population synthesis recipes for NIR bands and naive parameterization of star formation histories \citep{Taylor:2011,Courteau:2014}.
 
 First, spectral energy distribution (SED) fitting often relies on simplistic star formation history (SFH) parameterizations.
 Because NIR colors lift age-metallicity-dust degeneracies, modelling of NIR bands may require additional sophistication, namely composite star formation and metal enrichment histories.
@@ -156,7 +156,7 @@ In a future instalment we use resolved star counts to establish the NIR surface 
 % \includegraphics[width=\columnwidth]{figs/fieldmap_colour}
 \includegraphics[width=\columnwidth]{figs/bw2/f1}
 \caption{\androids\ WIRCam field positions on M31.
-Central blue tiles are the 27 disk fields observed in 2007B, surrounded by 4 sky fields.
+Central blue tiles are the 27 disk fields observed in 2007B, surrounded by four sky fields.
 Dark red tiles at center are the 12 disk fields observed in 2009B.
 The outer ring of 53 fields is the 2009B sky sampling ring.
 The dashed ellipse marks the M31 disk at $R=20$ kpc along the major axis.
@@ -581,7 +581,7 @@ Thus sky flat evolution is not driven by WIRCam gain instabilities, but by large
 \begin{figure}[t]
 \centering
 \includegraphics[width=\columnwidth]{figs/bw2/f8}
-\caption{Distribution of real-time sky flat scaling factors, measuring detector-to-detector zero-point differences relative to detector \#1 (gray: \#2, solid outline: \#3, dotted outline: \#4) in $J$ and $K_s$ bands.
+\caption{Distribution of real-time sky flat scaling factors, measuring detector-to-detector zero-point differences relative to detector no. 1 (gray: no. 2, black outline: no. 3, blue outline: no. 4) in $J$ and $K_s$ bands.
 }
 \label{fig:fw100k_zpdiff}
 % $andpipe/wircam/skyflat/plot/chip_zp_diff.py
@@ -591,8 +591,8 @@ Thus sky flat evolution is not driven by WIRCam gain instabilities, but by large
 \centering
 \includegraphics[width=\columnwidth]{figs/bw2/f9}
 \caption{Distribution of mean detector-to-detector zero-point offsets for sky images processed by real-time sky flats.
-Zero-point offsets between detectors \#1 \& \#2, \#1 \& \#3, and \#1 \& \#4 are plotted as
-gray, solid outline and dotted outline histograms, respectively, for the $J$-band (top) and $K_s$-band (bottom).}
+Zero-point offsets between detectors no. 1 and no. 2, no. 1 and no. 3, and no. 1 and no. 4 are plotted as
+gray, black outline and blue outline histograms, respectively, for the $J$ band (top) and $K_s$ band (bottom).}
 \label{fig:fw100k_chip_to_chip}
 % andpipe/wircam/calibset/photcal/singleimg/chip_consistency_zp_fixa.py
 \end{figure}
@@ -693,7 +693,7 @@ Effectively, \Fig{frame_diffs_skyfrac} illustrates the \emph{flatness limit} of 
 % \includegraphics[width=\columnwidth]{figs/framediffs_skyfrac_cdf}
 \includegraphics[width=\columnwidth]{figs/bw2/f11}
 \caption{Cumulative distributions of scalar difference amplitudes between individual frames and blocks in the $J$ (top) and $K_s$ (bottom) mosaics, measured as a dispersion of pixel differences at the 95\% level.
-  Whether processed with \texttt{QRUN} (red), \texttt{NIGHT} (black) or \texttt{FW100K} (blue) sky flats, or observed in 2007B (solid lines) or 2009B (dotted lines), the residual amplitude differences between frames and blocks are similarly distributed.
+Whether processed with \texttt{QRUN} (orange), \texttt{NIGHT} (black) or \texttt{FW100K} (blue) sky flats, or observed in 2007B (solid lines) or 2009B (dotted lines), the residual amplitude differences between frames and blocks are similarly distributed.
 The mean amplitude difference is $0.3\%$ of the $J$ background brightness ($0.2\%$ in $K_s$).
 }
 % Made with andpipe/wircam/shape/frame_block_residuals/plot_frame_residuals_hists.py
@@ -732,7 +732,7 @@ Similar backgrounds are seen by \cite{Vaduvescu:2004} in the CFHT-IR camera.
 \centering
 % \includegraphics[width=\columnwidth]{figs/mediansky_amplitude_cdf}
 \includegraphics[width=\columnwidth]{figs/bw2/f12}
-\caption{Cumulative distribution function of background level amplitudes across median sky images processed with \texttt{QRUN} (red), \texttt{NIGHT} (black) and \texttt{FW100K} (blue) sky flats for the $J$ (top) and $K_s$ (bottom) bands. Real-time (\texttt{FW100K}) sky flats produce much flatter median sky frames, with mean shape amplitudes of 0.3\% ($J$) to 0.1\% ($K_s$) of the NIR sky level, while the mean amplitude of \texttt{QRUN}-flat processed sky images is 1.5\% of the background level, and as high as 3\% of the background level. \texttt{NIGHT} flat-processed data generate mean shape amplitudes of $\sim 0.6\%$ of the background level.
+\caption{Cumulative distribution function of background level amplitudes across median sky images processed with \texttt{QRUN} (orange), \texttt{NIGHT} (black) and \texttt{FW100K} (blue) sky flats for the $J$ (top) and $K_s$ (bottom) bands. Real-time (\texttt{FW100K}) sky flats produce much flatter median sky frames, with mean shape amplitudes of 0.3\% ($J$) to 0.1\% ($K_s$) of the NIR sky level, while the mean amplitude of \texttt{QRUN}-flat processed sky images is 1.5\% of the background level, and as high as 3\% of the background level. \texttt{NIGHT} flat-processed data generate mean shape amplitudes of $\sim 0.6\%$ of the background level.
 We interpret this as \texttt{QRUN} flats introducing a bias in background shapes, while \texttt{FW100K} flats create unrealistically flat backgrounds by dividing skyglow structure that should be left for background subtraction.
 \texttt{NIGHT} flats have realistic background amplitudes that are similar in both bandpasses.
 }
